[tool.poetry]
name = "Session String Generator"
version = "0.1.0"
description = "Pyrogram & Telethon Session String Generator By TeLe TiPs."
authors = ["TeLe TiPs <teletipsofficialtutorials@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
Pyrogram = "^2.0.35"
Telethon = "^1.24.0"
TgCrypto = "^1.2.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
